# SemWeave

./: README.md  pyproject.toml
docs/: architecture.md  mcp_api.md  schema.md
examples/html/: index.html  mcp.config.json
examples/latex/: main.tex  mcp.config.json
examples/markdown/: README.md  mcp.config.json
skills/: annotate.md
src/semweave/: __init__.py  __main__.py
src/semweave/adapters/: comments.py
src/semweave/config/: defaults.py  loader.py  schema.py
src/semweave/core/: parser.py
src/semweave/mcp_server/: server.py
src/semweave/model/: graph.py  node.py
src/semweave/traversal/: builder.py  scanner.py
src/semweave/writer/: editor.py
tests/: conftest.py  test_config.py  test_editor.py  test_graph.py  test_integration.py  test_parser.py  test_scanner.py  test_server.py
tests/fixtures/: mcp.config.json
tests/fixtures/html/: sample.html
tests/fixtures/latex/: sample.tex
tests/fixtures/malformed/: bad_nesting.tex
tests/fixtures/markdown/: sample.md
