[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semweave"
version = "0.1.0"
description = "Language-agnostic MCP tool for annotation-driven structured navigation, retrieval, and editing"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
semweave = "semweave.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semweave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
